--- a/README.org
+++ b/README.org
@@ -3,6 +3,17 @@ twitch-websockets
 
 A websockets event interface for Twitch.tv channels.
 
+* Update (Jan 21 2021)
+
+  I'm going to update and rewrite large parts of this library.  I've decided
+  that 1) this is pretty useful and I've decided to write a twitch bot
+  for... well, for fun, and 2) that this library is pretty crappy as it is which
+  is a bit embarrassing.
+
+  So, essentially, I'm going to break it.  I'm pretty confident that no one
+  really uses this, but I figured a quick note was a good idea regardless.
+
+
 * Usage
 
   It's important to note that this package only provides a thin layer on top of
